crates/call_chain/tests/snapshots/base__call_chain_argument_active_param_not_last.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ArgumentList {
        prev: [
            ClassOrVariable {
                name: "a",
                range: AstRange {
                    start: AstPoint { 5:8 },
                    end: AstPoint { 5:9 },
                },
            },
            MethodCall {
                name: "concat",
                range: AstRange {
                    start: AstPoint { 5:10 },
                    end: AstPoint { 5:16 },
                },
            },
        ],
        active_param: Some(
            0,
        ),
        filled_params: [
            [
                ClassOrVariable {
                    name: "b",
                    range: AstRange {
                        start: AstPoint { 5:17 },
                        end: AstPoint { 5:18 },
                    },
                },
            ],
            [
                ClassOrVariable {
                    name: "c",
                    range: AstRange {
                        start: AstPoint { 5:21 },
                        end: AstPoint { 5:22 },
                    },
                },
            ],
        ],
        range: AstRange {
            start: AstPoint { 5:16 },
            end: AstPoint { 5:23 },
        },
    },
    ClassOrVariable {
        name: "b",
        range: AstRange {
            start: AstPoint { 5:17 },
            end: AstPoint { 5:18 },
        },
    },
]
