crates/call_chain/tests/snapshots/base__call_chain_argument_calc.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ArgumentList {
        prev: [
            MethodCall {
                name: "concat",
                range: AstRange {
                    start: AstPoint { 4:8 },
                    end: AstPoint { 4:14 },
                },
            },
        ],
        active_param: Some(
            0,
        ),
        filled_params: [
            [
                ClassOrVariable {
                    name: "a",
                    range: AstRange {
                        start: AstPoint { 4:21 },
                        end: AstPoint { 4:22 },
                    },
                },
                MethodCall {
                    name: "getThing",
                    range: AstRange {
                        start: AstPoint { 4:23 },
                        end: AstPoint { 4:31 },
                    },
                },
            ],
        ],
        range: AstRange {
            start: AstPoint { 4:14 },
            end: AstPoint { 4:34 },
        },
    },
    ClassOrVariable {
        name: "a",
        range: AstRange {
            start: AstPoint { 4:21 },
            end: AstPoint { 4:22 },
        },
    },
    MethodCall {
        name: "getThing",
        range: AstRange {
            start: AstPoint { 4:23 },
            end: AstPoint { 4:31 },
        },
    },
]
