crates/call_chain/tests/snapshots/base__call_chain_argument_var_no_dot.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ArgumentList {
        prev: [
            ClassOrVariable {
                name: "local",
                range: AstRange {
                    start: AstPoint { 5:8 },
                    end: AstPoint { 5:13 },
                },
            },
            MethodCall {
                name: "concat",
                range: AstRange {
                    start: AstPoint { 5:14 },
                    end: AstPoint { 5:20 },
                },
            },
        ],
        active_param: Some(
            0,
        ),
        filled_params: [
            [
                ClassOrVariable {
                    name: "local",
                    range: AstRange {
                        start: AstPoint { 5:21 },
                        end: AstPoint { 5:26 },
                    },
                },
            ],
        ],
        range: AstRange {
            start: AstPoint { 5:20 },
            end: AstPoint { 5:28 },
        },
    },
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint { 5:21 },
            end: AstPoint { 5:26 },
        },
    },
]
