crates/call_chain/tests/snapshots/base__call_chain_base.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint { 8:17 },
            end: AstPoint { 8:22 },
        },
    },
]
