crates/call_chain/tests/snapshots/base__call_chain_class.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "String",
        range: AstRange {
            start: AstPoint { 5:8 },
            end: AstPoint { 5:14 },
        },
    },
]
