crates/call_chain/tests/snapshots/base__call_chain_field_method.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint { 5:17 },
            end: AstPoint { 5:22 },
        },
    },
    FieldAccess {
        name: "a",
        range: AstRange {
            start: AstPoint { 5:23 },
            end: AstPoint { 5:24 },
        },
    },
    MethodCall {
        name: "b",
        range: AstRange {
            start: AstPoint { 5:25 },
            end: AstPoint { 5:26 },
        },
    },
]
